<resources>
    <string name="app_name">WDKS</string>
    <string name="my_ks">我的考试</string>
    <string name="search">输入关键字进行搜索</string>
    <string name="tuiG_tv1">活动页面</string>
    <string name="tuiG_tv2">40000课时任性学习</string>
    <string name="tuiG_tv3">活动页面</string>
    <string name="tuiG_tv4">一样的学习，不一样的惊喜</string>
    <string name="tuiG_tv5">活动页面</string>
    <string name="tuiG_tv6">一样的学习，不一样的惊喜</string>
    <string name="video_courses">免费视频</string>
    <string name="video_teacher">讲师:</string>
    <string name="price_ying">￥</string>
    <string name="free">免费</string>
    <string name="more">更多</string>
    <string name="accountant">会计类</string>
    <string name="finance">金融类</string>
    <string name="architect">建筑类</string>
    <string name="medicine">医学类</string>
    <string name="computer">计算机类</string>
    <string name="teacher">教师类</string>
    <string name="classify">分类:</string>
    <string name="book_recommend">图书推荐</string>
    <string name="exam_recommend">题库推荐</string>
    <string name="noConn">当前没有网络连接!</string>
    <string name="reFresh">点击图片刷新一下.</string>
    <string name="book">图书</string>
    <string name="exam">题库</string>
    <string name="add">加入购物车</string>
    <string name="consult_phone">电话咨询</string>
    <string name="consult_qq">QQ咨询</string>
    <string name="latest_news">最新资讯</string>
    <string name="official_news">官方公告</string>
    <string name="d_login">点击登录</string>
    <string name="login">登录</string>
    <string name="change_info">资料修改</string>
    <string name="buy_car">购物车</string>
    <string name="loading">加载中</string>
    <string name="hot_search">热门搜索</string>
    <string name="history">历史纪录</string>
    <string name="clear_history">清空历史纪录</string>
    <string name="more_recommend">更多推荐</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码?>></string>
    <string name="pwd_forget">忘记密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="chose_all">全选</string>
    <string name="add_all">合计:</string>
    <string name="no_price">（不含运费）</string>
    <string name="to_pay">去结算</string>
    <string name="confirm_order">确认订单</string>
    <string name="pay_off">结算</string>
    <string name="goods_price">商品金额</string>
    <string name="freight">运费</string>
    <string name="distribution_mode">配送方式</string>
    <string name="gong">共</string>
    <string name="U.">件商品</string>
    <string name="all_prices">总金额：￥</string>
    <string name="pay_now">立即支付</string>
    <string name="numbers">数量:</string>
    <string name="small">小计:￥</string>
    <string name="order_message">订单留言</string>
    <string name="goods_address">收货地址</string>
    <string name="add_goods_address">新增收货地址</string>
    <string name="add_new_address">添加新地址</string>
    <string name="address_add">收货地址为空,请添加!</string>
    <string name="confirm">确定</string>
    <string name="wei">微信</string>
    <string name="zhi_fu">支付宝</string>
    <string name="setting">设置</string>
    <string name="portrait">头像</string>
    <string name="change_pwd">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="wisdom">Wisdom</string>
    <string name="exam_carefully">考试精编</string>
    <string name="exam_chapter">章节练习</string>
    <string name="chapter">章</string>
    <string name="restart">清空重做</string>
    <string name="goon">继续练习</string>
    <string name="yc">预测试卷</string>
    <string name="myCollection">我的收藏</string>
    <string name="myWrong">我的错题</string>
    <string name="myAsk">我的答疑</string>
    <string name="myNote">我的笔记</string>
    <string name="testCard">答题卡</string>
    <string name="slash">/</string>
    <string name="submit_answer">提交答案</string>
    <string name="right_answer">正确答案</string>
    <string name="your_answer">你的答案</string>
    <string name="watch_explain">查看解析</string>
    <string name="question_explain">题目解析：</string>
    <string name="ask">提问:</string>
    <string name="submit">提交</string>
    <string name="notes">笔记</string>
    <string name="add_notes">添加笔记</string>
    <string name="handIn">交卷并查看结果</string>
    <string name="look_result">查看结果</string>
    <string name="wrong_exercise">错题练习</string>
    <string name="order_record">订单记录</string>
    <string name="order_num">订单号:</string>
    <string name="price">单价:</string>
    <string name="order_empty">当前订单为空</string>
    <string name="buyCar_empty">购物车为空</string>
    <string name="study_card">我的学习卡</string>
    <string name="study_card_yu">账户余额:</string>
    <string name="recharge">充值</string>
    <string name="recharge_record">充值记录</string>
    <string name="recharge_time">充值时间:</string>
    <string name="recharge_money">充值金额:</string>
    <string name="recharge_num">充值卡号:</string>
    <string name="yuan">元</string>
    <string name="pay_record">缴费记录</string>
    <string name="feedback">问题反馈</string>
    <string name="contact_way">联系方式:</string>
    <string name="about_us">关于我们</string>
    <string name="true_name">真实姓名</string>
    <string name="input_true_name">请输入您的真实姓名</string>
    <string name="contact">联系方式</string>
    <string name="input_contact">请输入您的联系方式</string>
    <string name="chose_district">选择地区</string>
    <string name="input_district">请选择地区</string>
    <string name="detail_address">详细地址</string>
    <string name="input_detail_address">请输入您的详细地址</string>
    <string name="save">保存</string>
    <string name="edit_goods_address">编辑收货地址</string>
    <string name="set_default">设为默认</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="state_empty">当前地址为空,请添加地址!</string>
    <string name="buy_numbers">购买数量：</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="excise">刷题</string>
    <string name="my_exam">我的题库</string>
</resources>
