<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ks_page5_p1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:background="@color/deepSkyBlue"
            android:gravity="center">

            <TextView
                style="@style/Middle_content"
                android:text="@string/my_ks" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ks_page5_iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ico_wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_40dp"
                android:text="@string/noConn"
                android:textSize="@dimen/size_15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reFresh"
                android:textSize="@dimen/size_15sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
