<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ks_page1_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <!--左边一个按钮-->
    <LinearLayout
        android:id="@+id/ks_page1_content_btn1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ks_page1_content_btn1_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuiG_tv1"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/size_15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="@string/tuiG_tv2"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/size_10sp" />

        <ImageView
            android:id="@+id/ks_page1_iv1"
            android:layout_width="@dimen/size_50dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginTop="@dimen/size_5dp" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/size_0.5dp"
        android:layout_height="match_parent"
        android:background="@color/light_grey" />
    <!--右边两个按钮-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <!--第二个按钮-->
        <LinearLayout
            android:id="@+id/ks_page1_content_btn2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/size_20dp">

                <TextView
                    android:id="@+id/ks_page1_content_btn1_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuiG_tv3"
                    android:textColor="@color/greyBlack"
                    android:textSize="@dimen/size_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/tuiG_tv4"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/size_10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ks_page1_iv2"
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_marginRight="@dimen/size_10dp" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5dp"
            android:background="@color/light_grey" />

        <!--第三个按钮-->
        <LinearLayout
            android:id="@+id/ks_page1_content_btn3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ks_page1_content_btn1_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:text="@string/tuiG_tv5"
                    android:textColor="@color/greyBlack"
                    android:textSize="@dimen/size_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/tuiG_tv6"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/size_10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ks_page1_iv3"
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_marginRight="@dimen/size_10dp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
